Remove Cloudflare Pages deployment configs (using Ubuntu server instead)

--- a/configs/nginx-cloudflare.conf
+++ b/configs/nginx-cloudflare.conf
@@ -4,7 +4,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name yourdomain.com www.yourdomain.com;
+    server_name senditfast.net www.senditfast.net;
     
     # Redirect to HTTPS only if NOT from Cloudflare
     set $redirect 0;
